watershed-kernel/tests/compile_fail/construct_validated_plan_directly.stderr
error: cannot construct `Validated` with struct literal syntax due to private fields
 --> $WORKSPACE/tests/compile_fail/construct_validated_plan_directly.rs
  |
  |       let validated = Validated {
  |                       ^^^^^^^^^
  | /         intent: RecoveredIntent {
  | |             goal: "skip ceremony".to_owned(),
  | |             scope: Vec::new(),
  | |             constraints: Vec::new(),
  | |             non_goals: Vec::new(),
  | |         },
  | |_________- private field
  |           claims: Vec::new(),
  |           ------------------ private field
  |           max_retries: None,
  |           ----------------- private field
  |
  = note: ...and other private field `verification` that was not provided
